# cpp_template_cgcp

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: CMakeLists.txt  main.cpp
cmake/: build_external_project.cmake
doc/document/: .gitignore
doc_source/: .env  CMakeLists.txt  Dockerfile  compile.sh  docker-compose.yml
doc_source/tex/document/common/: command_definition.tex
doc_source/tex/document/common/resources/: literature.bib
doc_source/tex/document/en/: document.tex  title_page.tex
doc_source/tex/document/en/chapter_01/: chapter_01.tex
doc_source/tex/document/en/resources/: glossary.tex
doc_source/tex/latex_files/: a_latex_file.txt
doxygen/: .env  CMakeLists.txt  Dockerfile  compile.sh  docker-compose.yml
ext/: CMakeLists.txt  externals.cmake  fltk.cmake  glad.cmake  glm.cmake  opencv.cmake
ext/opencv/: CMakeLists.txt
ext/opengl/: CMakeLists.txt
lib/: CMakeLists.txt
lib/template_lib/: CMakeLists.txt  Doxyfile
lib/template_lib/include/template_lib/: macro_definition.hpp  template_lib.hpp  type.hpp
lib/template_lib/src/: CMakeLists.txt  template_lib.cpp  type.cpp
main/: CMakeLists.txt
test/: CMakeLists.txt
test/ext/: CMakeLists.txt  externals.cmake  googletest.cmake  nlohmann_json.cmake
test/template_lib/: CMakeLists.txt
test/template_lib/resources/00_test_case_1/: description.json
test/template_lib/src/: CMakeLists.txt  environment.cpp  environment.hpp  main.cpp  template_lib_test.cpp
